# radar

./: .dockerignore  .env.example  .env.production  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  LICENSE.md  README.md  SECURITY.md  docker-compose.yml  index.html  package-lock.json  package.json  render.yaml
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: release.yml
radar-server/: .env.example  Cargo.toml  README.md
radar-server/migrations/: 20260419000000_initial.sql  20260419000001_profile.sql  20260419000002_categories.sql  20260419000003_sources.sql  20260419000004_archives.sql  20260419000005_article_states.sql  20260419000006_clerk_migration.sql  20260419000007_prefs.sql
radar-server/src/: archives.rs  article_states.rs  categories.rs  clerk.rs  error.rs  etag.rs  jwks.rs  main.rs  prefs.rs  profile.rs  rate_limit.rs  sources.rs  state.rs  types.rs
scripts/: sync-version.mjs
src/: App.jsx  clerkPersist.js  data.js  external.js  flushRegistry.js  log.js  main.jsx  notify.js  storage.js  styles.css  sync.js  syncQueue.js  time.js  tray.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ingest.rs  keychain.rs  lib.rs  main.rs  schedule_plist.rs  schedule_wake.rs  scheduler.rs  summarize.rs  tray.rs
src/components/: Card.jsx  Header.jsx  Icon.jsx  OnboardingTutorial.jsx  SearchPalette.jsx  Sidebar.jsx  SyncIndicator.jsx  Toggle.jsx  Tweaks.jsx
src/hooks/: useSyncStatus.js  useSyncedResource.js  useUpdater.js
src/views/: ArchiveView.jsx  BriefingView.jsx  CategoriesView.jsx  EmptyState.jsx  SavedView.jsx  SettingsView.jsx  SourcesView.jsx
