[package]
name = "radar"
version = "0.2.19"
edition.workspace = true

[lib]
name = "radar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "json"] }
feed-rs = "2"
futures = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
tokio = { version = "1", features = ["rt", "macros"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-autostart = "2.5.1"
